# Linalg-To-Affine-Lowering

./: README.md
LinalgPasses/: CMakeLists.txt
LinalgPasses/src/Transforms/: CMakeLists.txt  CustomPasses.h.inc  LinalgtoAffine.cpp  Passes.h  Passes.h.inc  Passes.td
LinalgPasses/test/: input.mlir  input_tensor.mlir  test.cc
LinalgPasses/tools/: CMakeLists.txt  linalg-opt.cpp
